private && bugfix for submit button visibility post-submit

--- a/web/public/js/directives/cd-start-dojo/team/style.less
+++ b/web/public/js/directives/cd-start-dojo/team/style.less
@@ -50,6 +50,7 @@ cd-sad-team {
     }
     &--solo {
       .team-block;
+      padding: 16px;
     }
     &-srcs {
       flex: 1;
